--- a/Pages/01Bottom Bar/Contact/contactstext.org
+++ b/Pages/01Bottom Bar/Contact/contactstext.org
@@ -1,14 +1,17 @@
 ** Contact
-=== Build XR
+
 We are open most days, all hours, by appointment.   481 Van Brunt, Brooklyn, New York, 11231
-: map :
-[text box Message Submit]
-: Email :
+: map : https://www.google.com/maps/search/xr+media/@40.658784,-74.0266566,12z/data=!3m1!4b1
+[text box Message Submit
+]
+: Email : AnnaIrene@novamedia.nyc
 : Telegram :
-: Instagram :
-: Facebook :
-: Twitter :
+: Instagram :  @novaxrmedia 
+: Facebook : https://www.facebook.com/N0vamedia/
+: Twitter : @N0vamedia
 : GoogleVoice :
-: slack :
-: steemit :
+: slack : novamedianyc.slack.com
+: steemit : 
 : Sketchfab :
+
+=== Build XR 
