--- a/Pages/1Solutions/2Services/1Consultation/1Consultative Services/sourcing development/sourcingdevwebtext.org
+++ b/Pages/1Solutions/2Services/1Consultation/1Consultative Services/sourcing development/sourcingdevwebtext.org
@@ -1,7 +1,8 @@
 ***** Sourcing Development
  
-We scout top talent from around the world. Our team has access for you in more than 50 contries.
+We scout deliver top  talent from around the world   
 
-We often hire third-party developers dependent on tasks, developers have a considerable amount of input on the expereiences design and content. 
+We often hire third-party developers to increase net profits, and to improve internet access to remote parts of the world through program /NovaCaine/  
 
-The business arrangement between the developer is governed by a contract, which specifies a list of milestones intended to be delivered over a period of time. By tracking and adapting milestones we manage development rate, hours and deadlines.  Nova work is guarenteed.   
+The business arrangement between the developers is governed by a contract, which specifies a list of milestones intended to be delivered over a period of time. By tracking and adapting milestones we manage development rate, hours and deadlines.  Nova work is guarenteed.   
+ 
