--- a/PageTable.org
+++ b/PageTable.org
@@ -1,5 +1,5 @@
  gs0 landing page
-1 menu 1
+1 menu 1 
 2 menu 2
 3 menu 3 or blogstyle highest titles
 4 blogstyle highest or second title
@@ -174,41 +174,41 @@ gant = gnt chart of campaign
 blg = related blog post
 
 
-| Product pages         | funx              | form                | launch  | graphic | Intro | exsum | ft. | ben | rsch | usrstry | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal | budget | tagline |   |   |   |
-| architet              | blueprint         |                     | feb 12  | y       |       | y     |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| color                 | chose colors      |                     | feb 12  | y       |       | y     |     |     |      |         |    | y   |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| music                 |                   |                     | feb 12  |         |       | y     |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| bloomaway             | travel            |                     | feb 12  | y       |       | y     |     |     |      |         |    | y   |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| infinite              | view content      | art gallery         | feb 12  | y       |       | y     | y   |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| facematch             | ad-view verify    |                     | feb 12  | y       |       | y     |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| live stream           | telepresence      |                     | feb 12  |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| nye                   | entertainment     |                     | feb 12  | y       |       | y     |     | y   |      |         | y  | y   | y     |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| live forever          | immortalize       |                     | march 1 |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| enterprise b2b        |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| exhibit               |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| festival              |                   | event               |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| wellness              |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| 3d brand design       |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| anon on blockchain    |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| ar branding           |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| ar reatil             |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| ar event              |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| fifa                  |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| foodman               |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| health care           |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| hotels                |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| in vr                 |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| sports                |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| token sale            |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| encyclopedia          | index information | visual encyclopedia |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| xr-first website      |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| emacs GUI             |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| torus                 |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| existing int he world |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| bioler room           |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| 3d brand design       |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| city dev              |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| coaches               |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| token sale            |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-| scavenger hunt        |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   |
-|                       |                   |                     |         |         |       |       |     |     |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |   | gs
+| solutions pages       | funx                     | form                | launch  | graphic | Intro | exsum | ft. | ben | investment | rsch |  gsusrstry | TA | TAG | propi | distrn | conl | wbd | anim | fstrat | cf | gant | related VR exp | legal | budget | tagline |   |   |    |   |
+| architet              | blueprint                | sketch house        | feb 12  | y       |       | y     |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| color                 | chose colors             |                     | feb 12  | y       |       | y     |     |     |            |      |         | y  |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| music                 | discovefr, share, create | moon                | feb 12  |         |       | y     |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| bloomaway             | travel                   |                     | feb 12  | y       |       | y     |     |     |            |      |         | y  |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| infinite              | view content             | art gallery         | feb 12  | y       |       | y     | y   |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| facematch             | ad-view verify           |                     | feb 12  | y       |       | y     |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| live stream           | telepresence             |                     | feb 12  |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| nye                   | entertainment            |                     | feb 12  | y       |       | y     |     | y   |            |      | y       | y  | y   |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| live forever          | immortalize              |                     | march 1 |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| enterprise b2b        |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| exhibit               |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| festival              |                          | event               |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| wellness              |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| 3d brand design       |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| anon on blockchain    |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| ar branding           |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| ar reatil             |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| ar event              |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| fifa                  |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| foodman               |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| health care           |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| hotels                |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| in vr                 |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| sports                |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| token sale            |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| encyclopedia          | index information        | visual encyclopedia |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| xr-first website      |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| emacs GUI             |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| torus                 |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| existing int he world |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| bioler room           |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| 3d brand design       |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| city dev              |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| coaches               |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| token sale            |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+| scavenger hunt        |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   |    |   |
+|                       |                          |                     |         |         |       |       |     |     |            |      |         |    |     |       |        |      |     |      |        |    |      |                |       |        |         |   |   | gs |   |
